ai-sales-assistant/force-app/main/default/objects/AI_Config__mdt/AI_Config__mdt.object-meta.xml
<CustomObject>
    <label>AI Config</label>
    <pluralLabel>AI Configs</pluralLabel>
    <description>Tunable thresholds and feature flags for the AI Sales Assistant, read by OpportunityService and RiskAnalysisService.</description>
</CustomObject>