ai-sales-assistant/force-app/main/default/objects/AI_Config__mdt/fields/AI_Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>AI_Endpoint_Path__c</fullName>
    <label>AI Endpoint Path</label>
    <description>Path appended to the AI_Service named credential base URL when calling out for recommendations.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>