ai-sales-assistant/force-app/main/default/objects/AI_Config__mdt/fields/Enable_AI_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Enable_AI_Recommendations__c</fullName>
    <label>Enable AI Recommendations</label>
    <description>Feature flag checked by AIRecommendationService before generating/refreshing recommendations.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>