ai-sales-assistant/force-app/main/default/objects/AI_Config__mdt/fields/High_Risk_Threshold__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Threshold__c</fullName>
    <label>High Risk Threshold</label>
    <description>Risk_Score__c at or above this value is bucketed as High.</description>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>