ai-sales-assistant/force-app/main/default/objects/AI_Config__mdt/fields/Medium_Risk_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Medium_Risk_Threshold__c</fullName>
    <label>Medium Risk Threshold</label>
    <description>Risk_Score__c at or above this value (and below High_Risk_Threshold__c) is bucketed as Medium.</description>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>