ai-sales-assistant/force-app/main/default/objects/AI_Config__mdt/fields/Stale_Deal_Days__c.field-meta.xml
<CustomField>
    <fullName>Stale_Deal_Days__c</fullName>
    <label>Stale Deal Days</label>
    <description>Number of days without an activity before a deal is considered stale for risk scoring purposes.</description>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>